@@ -16,7 +16,6 @@ import org.hamcrest.Matcher;
 
 import java.nio.ByteBuffer;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -64,7 +63,7 @@ public class UploadFileMessageTest {
     private static List<UploadFileMessage> roundtripPackets(List<UploadFileMessage> packets) {
         return packets.stream().map(packet -> {
             var buffer = new FriendlyByteBuf(Unpooled.directBuffer());
-            packet.toBytes(buffer);
+            packet.write(buffer);
             // We include things like file size in the packet, but not in the count, so grant a slightly larger threshold.
             assertThat("Packet is too large", buffer.writerIndex(), lessThanOrEqualTo(MAX_PACKET_SIZE + 128));
             if ((packet.flag & FLAG_LAST) == 0) {
@@ -110,7 +109,7 @@ public class UploadFileMessageTest {
     @Provide
     Arbitrary<FileUpload> fileUpload() {
         return Combinators.combine(
-            Arbitraries.oneOf(Arrays.asList(
+            Arbitraries.oneOf(List.of(
                 // 1.16 doesn't correctly handle unicode file names. We'll be generous in our tests here.
                 Arbitraries.strings().ofMinLength(1).ascii().ofMaxLength(MAX_FILE_NAME),
                 Arbitraries.strings().ofMinLength(1).ofMaxLength(MAX_FILE_NAME / 4)
