@@ -7,7 +7,6 @@ package dan200.computercraft.api.peripheral;
 import dan200.computercraft.api.lua.LuaFunction;
 
 import javax.annotation.Nullable;
-import java.util.Collections;
 import java.util.Set;
 
 /**
@@ -35,11 +34,11 @@ public interface IPeripheral {
      * @see PeripheralType#getAdditionalTypes()
      */
     default Set<String> getAdditionalTypes() {
-        return Collections.emptySet();
+        return Set.of();
     }
 
     /**
-     * Is called when when a computer is attaching to the peripheral.
+     * Is called when a computer is attaching to the peripheral.
      * <p>
      * This will occur when a peripheral is placed next to an active computer, when a computer is turned on next to a
      * peripheral, when a turtle travels into a square next to a peripheral, or when a wired modem adjacent to this
