@@ -4,20 +4,18 @@
 
 package dan200.computercraft.core.apis;
 
-import dan200.computercraft.api.lua.IArguments;
-import dan200.computercraft.api.lua.ILuaAPI;
-import dan200.computercraft.api.lua.LuaException;
-import dan200.computercraft.api.lua.LuaFunction;
+import dan200.computercraft.api.lua.*;
 import dan200.computercraft.core.CoreConfig;
 import dan200.computercraft.core.apis.http.*;
 import dan200.computercraft.core.apis.http.request.HttpRequest;
 import dan200.computercraft.core.apis.http.websocket.Websocket;
+import dan200.computercraft.core.apis.http.websocket.WebsocketClient;
 import io.netty.handler.codec.http.DefaultHttpHeaders;
 import io.netty.handler.codec.http.HttpHeaderNames;
 import io.netty.handler.codec.http.HttpHeaders;
 import io.netty.handler.codec.http.HttpMethod;
 
-import java.util.Collections;
+import java.nio.ByteBuffer;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
@@ -73,7 +71,8 @@ public class HTTPAPI implements ILuaAPI {
 
     @LuaFunction
     public final Object[] request(IArguments args) throws LuaException {
-        String address, postString, requestMethod;
+        String address, requestMethod;
+        ByteBuffer postBody;
         Map<?, ?> headerTable;
         boolean binary, redirect;
         Optional<Double> timeoutArg;
@@ -81,8 +80,9 @@ public class HTTPAPI implements ILuaAPI {
         if (args.get(0) instanceof Map) {
             var options = args.getTable(0);
             address = getStringField(options, "url");
-            postString = optStringField(options, "body", null);
-            headerTable = optTableField(options, "headers", Collections.emptyMap());
+            var postString = optStringField(options, "body", null);
+            postBody = postString == null ? null : LuaValues.encode(postString);
+            headerTable = optTableField(options, "headers", Map.of());
             binary = optBooleanField(options, "binary", false);
             requestMethod = optStringField(options, "method", null);
             redirect = optBooleanField(options, "redirect", true);
@@ -90,8 +90,8 @@ public class HTTPAPI implements ILuaAPI {
         } else {
             // Get URL and post information
             address = args.getString(0);
-            postString = args.optString(1, null);
-            headerTable = args.optTable(2, Collections.emptyMap());
+            postBody = args.optBytes(1).orElse(null);
+            headerTable = args.optTable(2, Map.of());
             binary = args.optBoolean(3, false);
             requestMethod = null;
             redirect = true;
@@ -103,7 +103,7 @@ public class HTTPAPI implements ILuaAPI {
 
         HttpMethod httpMethod;
         if (requestMethod == null) {
-            httpMethod = postString == null ? HttpMethod.GET : HttpMethod.POST;
+            httpMethod = postBody == null ? HttpMethod.GET : HttpMethod.POST;
         } else {
             httpMethod = HttpMethod.valueOf(requestMethod.toUpperCase(Locale.ROOT));
             if (httpMethod == null || requestMethod.equalsIgnoreCase("CONNECT")) {
@@ -113,7 +113,7 @@ public class HTTPAPI implements ILuaAPI {
 
         try {
             var uri = HttpRequest.checkUri(address);
-            var request = new HttpRequest(requests, apiEnvironment, address, postString, headers, binary, redirect, timeout);
+            var request = new HttpRequest(requests, apiEnvironment, address, postBody, headers, binary, redirect, timeout);
 
             // Make the request
             if (!request.queue(r -> r.request(uri, httpMethod))) {
@@ -153,11 +153,11 @@ public class HTTPAPI implements ILuaAPI {
         if (args.get(0) instanceof Map) {
             var options = args.getTable(0);
             address = getStringField(options, "url");
-            headerTable = optTableField(options, "headers", Collections.emptyMap());
+            headerTable = optTableField(options, "headers", Map.of());
             timeoutArg = optRealField(options, "timeout");
         } else {
             address = args.getString(0);
-            headerTable = args.optTable(1, Collections.emptyMap());
+            headerTable = args.optTable(1, Map.of());
             timeoutArg = Optional.empty();
         }
 
@@ -165,7 +165,7 @@ public class HTTPAPI implements ILuaAPI {
         var timeout = getTimeout(timeoutArg);
 
         try {
-            var uri = Websocket.checkUri(address);
+            var uri = WebsocketClient.parseUri(address);
             if (!new Websocket(websockets, apiEnvironment, uri, address, headers, timeout).queue(Websocket::connect)) {
                 throw new LuaException("Too many websockets already open");
             }
