@@ -4,6 +4,8 @@
 
 package dan200.computercraft.core;
 
+import com.google.common.base.Splitter;
+import dan200.computercraft.api.filesystem.MountConstants;
 import dan200.computercraft.api.filesystem.WritableMount;
 import dan200.computercraft.api.lua.ILuaAPI;
 import dan200.computercraft.api.lua.LuaException;
@@ -104,7 +106,7 @@ public class ComputerTestDelegate {
         for (var child : children) mount.delete(child);
 
         // And add our startup file
-        try (var channel = mount.openForWrite("startup.lua");
+        try (var channel = mount.openFile("startup.lua", MountConstants.WRITE_OPTIONS);
              var writer = Channels.newWriter(channel, StandardCharsets.UTF_8.newEncoder(), -1)) {
             writer.write("loadfile('test-rom/mcfly.lua', nil, _ENV)('test-rom/spec') cct_test.finish()");
         }
@@ -194,7 +196,7 @@ public class ComputerTestDelegate {
         DynamicNodeBuilder(String name, String path, Executable executor) {
             this.name = name;
             this.uri = getUri(path);
-            this.children = Collections.emptyMap();
+            this.children = Map.of();
             this.executor = executor;
         }
 
@@ -294,7 +296,7 @@ public class ComputerTestDelegate {
 
         @LuaFunction
         public final Collection<String> getNamesRemote() {
-            return Collections.singleton("remote_1");
+            return List.of("remote_1");
         }
 
         @LuaFunction
@@ -314,7 +316,7 @@ public class ComputerTestDelegate {
 
         @LuaFunction
         public final Object[] getMethodsRemote(String name) {
-            return name.equals("remote_1") ? new Object[]{ Collections.singletonList("func") } : null;
+            return name.equals("remote_1") ? new Object[]{ List.of("func") } : null;
         }
     }
 
@@ -346,10 +348,10 @@ public class ComputerTestDelegate {
                 var details = (Map<?, ?>) entry.getValue();
                 var def = (String) details.get("definition");
 
-                var parts = name.split("\0");
+                var parts = Splitter.on('\0').splitToList(name);
                 var builder = root;
-                for (var i = 0; i < parts.length - 1; i++) builder = builder.get(parts[i]);
-                builder.runs(parts[parts.length - 1], def, () -> {
+                for (var i = 0; i < parts.size() - 1; i++) builder = builder.get(parts.get(i));
+                builder.runs(parts.get(parts.size() - 1), def, () -> {
                     // Run it
                     lock.lockInterruptibly();
                     try {
