@@ -10,7 +10,7 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
 
 import java.net.InetSocketAddress;
-import java.util.Collections;
+import java.util.List;
 import java.util.OptionalInt;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -18,13 +18,13 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 public class AddressRuleTest {
     @Test
     public void matchesPort() {
-        Iterable<AddressRule> rules = Collections.singletonList(AddressRule.parse(
+        Iterable<AddressRule> rules = List.of(AddressRule.parse(
             "127.0.0.1", OptionalInt.of(8080),
             Action.ALLOW.toPartial()
         ));
 
-        assertEquals(apply(rules, "localhost", 8080).action, Action.ALLOW);
-        assertEquals(apply(rules, "localhost", 8081).action, Action.DENY);
+        assertEquals(apply(rules, "localhost", 8080).action(), Action.ALLOW);
+        assertEquals(apply(rules, "localhost", 8081).action(), Action.DENY);
     }
 
     @ParameterizedTest
@@ -43,7 +43,7 @@ public class AddressRuleTest {
         "169.254.169.254", // AWS, Digital Ocean, GCP, etc..
     })
     public void blocksLocalDomains(String domain) {
-        assertEquals(apply(CoreConfig.httpRules, domain, 80).action, Action.DENY);
+        assertEquals(apply(CoreConfig.httpRules, domain, 80).action(), Action.DENY);
     }
 
     @ParameterizedTest
@@ -52,7 +52,7 @@ public class AddressRuleTest {
         "100.63.255.255", "100.128.0.0"
     })
     public void allowsNonLocalDomains(String domain) {
-        assertEquals(apply(CoreConfig.httpRules, domain, 80).action, Action.ALLOW);
+        assertEquals(apply(CoreConfig.httpRules, domain, 80).action(), Action.ALLOW);
     }
 
     private Options apply(Iterable<AddressRule> rules, String host, int port) {
